<resources>
    <string name="app_name">Math_Quiz_practise</string>
    <string name="go">GO</string>
    <string name="math">math</string>
    <string name="master">master</string>
    <string name="Score">Score :</string>
    <string name="remainingtime">Remaining Time:</string>
    <string name="Addition">Addition</string>
    <string name="SUBSTRACTION">SUBSTRACTION</string>
    <string name="MULTIPLICATION">MULTIPLICATION</string>
    <string name="DIVISION">DIVISION</string>
    <string name="Score_view_Box">Your Total Score</string>
</resources>