<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".DashBoard">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math"
        android:textSize="16sp"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/master"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="56dp"
        android:textColor="#339933"
        android:textSize="20sp"
        android:layout_marginTop="120dp"
        android:background="@drawable/mybutton"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="5dp"
        android:text="@string/Addition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="340dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:textColor="#339933"
        android:text="@string/SUBSTRACTION"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_min"
        android:drawablePadding="5dp"
        android:background="@drawable/mybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="340dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/mybutton"
        android:text="@string/MULTIPLICATION"
        android:textColor="#339933"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_mul"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="340dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/mybutton"
        android:text="@string/DIVISION"
        android:drawableStart="@drawable/ic_div"
        android:drawablePadding="5dp"
        android:textColor="#339933"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</androidx.constraintlayout.widget.ConstraintLayout>